@@ -2,6 +2,9 @@ Sep 01, 2013 - chris ---------------------------------------------------
 o issue 27: No longer enabling AES encryption if openssl headers
 	are missing
 
+Aug 22, 2013 - chris ---------------------------------------------------
+o Cleaned up the configure.ac script
+
 Aug 23, 2013 - chris ---------------------------------------------------
                       release of hamsterdb-2.1.2
 
